feat: adiciona script de teclado na build

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Optimization Test</title>
+    <title>Unity WebGL Player | Keyboard Mobile</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -19,20 +19,20 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Optimization Test</div>
+        <div id="unity-build-title">Keyboard Mobile</div>
       </div>
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Keyboard Test v1.0.0.loader.js";
+      var loaderUrl = buildUrl + "/Keyboard Test v1.0.1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Keyboard Test v1.0.0.data",
-        frameworkUrl: buildUrl + "/Keyboard Test v1.0.0.framework.js",
-        codeUrl: buildUrl + "/Keyboard Test v1.0.0.wasm",
+        dataUrl: buildUrl + "/Keyboard Test v1.0.1.data",
+        frameworkUrl: buildUrl + "/Keyboard Test v1.0.1.framework.js",
+        codeUrl: buildUrl + "/Keyboard Test v1.0.1.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "Optimization Test",
-        productVersion: "0.1",
+        productName: "Keyboard Mobile",
+        productVersion: "1.0.1",
       };
 
       var container = document.querySelector("#unity-container");
